c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/bitwise_rshift_pointer.c
/* It's illegal to apply left or right bitshift operations to pointers */
int main(void) {
    int *x = 0;
    return (int) (x >> 10);
}